# miet-python

./: pyproject.toml
lab1/: lab_1_1_1.py  lab_1_2_1.py  lab_1_3_1.py
lab2/: book.txt  lab_2_1_1.py  lab_2_2_1.py  lab_2_3_1.py  lab_2_4_1.py  lab_2_5_1.py  lab_2_6_1.py  players.csv  results.csv
lab2/example/: 00PV3JXX.txt  0452NJGP.txt  05B9R3LI.txt  06PCB9XZ.txt  06X5WAS6.txt  076VMYEE.txt  09IDZN0X.txt  0AAZJZ5M.txt  0C2GX11S.txt  0I8AEJ62.txt  0JZEXT95.txt  0M2LPMOB.txt  0MYEENA8.txt  0Q724JTE.txt  0QLMCRQU.txt  0R4VTR3B.txt  0RBA3TRF.txt  0RHJDOW3.txt  0RW5FAFJ.txt  0TTKMD2E.txt  0V1TMGBM.txt  0VO8X6RN.txt  0Y4ZEQZT.txt  0Y5LAQAG.txt  0ZI7F4B4.txt  0ZQNUFIJ.txt  0ZZJ01J6.txt  10SSPNQ8.txt  11O5EOST.txt  11X6K5KH.txt  15CGCRZT.txt  17J843I6.txt  17PQ2ZST.txt  19SHM9LN.txt  19ZPW5IB.txt  1B0LWZNC.txt  1CMKX47B.txt  1EOGZS2D.txt  1EVEKNIM.txt  1HLJW1NA.txt  (+959 more)
lab2/test/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+60 more)
lab3/: lab_3_1_1.py  lab_3_2_1.py  lab_3_3_1.py
lab4/: book.py  bottle.py  car.py  item.py  lab_4_1_1.py  racecar.py
lab5/: file_service.py  lab_5_1_1.py  len_exception.py  test_file_service.py  text.txt
lab6/: lab_6_2_3.py  lab_6_3_3.py  lab_6_4_3.py
lab7/: client.py  collector.py  common.py  sender.py  server.py  settings.py
