[tool.poetry]
name = "miet-python"
version = "0.1.0"
description = ""
authors = ["Rodion Timofeev <timofeev.rodion@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
